--- a/style/main.css
+++ b/style/main.css
@@ -314,104 +314,147 @@ hr {
     font-weight: bold;
     z-index: 10;
     font-size: 55px; }
+  .tile.tile-1 .tile-inner {
+    background: #eee4da; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;}
-  .tile.tile-4 .tile-inner {
-    background: #f6ebeb;}
+    background: #f6ebeb; }
+  .tile.tile-3 .tile-inner {
+    background: #f0effc; }
+  .tile.tile-5 .tile-inner {
+    background: #e7edeb; }
   .tile.tile-8 .tile-inner {
     background: #eedada; }
-  .tile.tile-16 .tile-inner {
+  .tile.tile-13 .tile-inner {
+    background: #eedae7; }
+  .tile.tile-21 .tile-inner {
     background: #eedae4; }
-  .tile.tile-32 .tile-inner {
+  .tile.tile-34 .tile-inner {
+    color: #f9f6f2;
+    background: #dec9d7; }
+  .tile.tile-55 .tile-inner {
     color: #f9f6f2;
     background: #deb7cb; }
-  .tile.tile-64 .tile-inner {
+  .tile.tile-89 .tile-inner {
     color: #f9f6f2;
     background: #cab7de; }
-  .tile.tile-128 .tile-inner {
+  .tile.tile-144 .tile-inner {
     color: #f9f6f2;
     background: #b7b8de;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-128 .tile-inner {
+      .tile.tile-144 .tile-inner {
         font-size: 25px; } }
-  .tile.tile-256 .tile-inner {
+  .tile.tile-233 .tile-inner {
     color: #f9f6f2;
     background: #a3cef2;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-256 .tile-inner {
+      .tile.tile-233 .tile-inner {
         font-size: 25px; } }
-  .tile.tile-512 .tile-inner {
+  .tile.tile-377 .tile-inner {
+    color: #f9f6f2;
+    background: #95ddc7;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
+    font-size: 45px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-377 .tile-inner {
+        font-size: 25px; } }
+  .tile.tile-610 .tile-inner {
     color: #f9f6f2;
     background: #76ecac;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-512 .tile-inner {
+      .tile.tile-610 .tile-inner {
         font-size: 25px; } }
-  .tile.tile-1024 .tile-inner {
+  .tile.tile-987 .tile-inner {
+    color: #f9f6f2;
+    background: #8ae97a;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
+    font-size: 45px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-987 .tile-inner {
+        font-size: 25px; } }
+  .tile.tile-1597 .tile-inner {
     color: #f9f6f2;
     background: #9ee649;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-1024 .tile-inner {
+      .tile.tile-1597 .tile-inner {
         font-size: 15px; } }
-  .tile.tile-2048 .tile-inner {
+  .tile.tile-2584 .tile-inner {
     color: #f9f6f2;
     background: #f8df50;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-2048 .tile-inner {
+      .tile.tile-2584 .tile-inner {
         font-size: 15px; } }
 
-  .tile.tile-4096 .tile-inner {
+  .tile.tile-4181 .tile-inner {
     color: #f9f6f2;
     background: #ffb85b;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.66), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-4096 .tile-inner {
+      .tile.tile-4181 .tile-inner {
         font-size: 15px; } }
 
-  .tile.tile-8192 .tile-inner {
+  .tile.tile-6765 .tile-inner {
     color: #f9f6f2;
     background: #ff8f5b;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.70), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-8192 .tile-inner {
+      .tile.tile-6765 .tile-inner {
         font-size: 15px; } }
 
-  .tile.tile-16384 .tile-inner {
+  .tile.tile-10946 .tile-inner {
+    color: #f9f6f2;
+    background: #ff7b5b;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.70), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 27px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-10946 .tile-inner {
+        font-size: 12px; } }
+
+  .tile.tile-17711 .tile-inner {
     color: #f9f6f2;
     background: #ff665b;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.74), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 27px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-16384 .tile-inner {
+      .tile.tile-17711 .tile-inner {
         font-size: 12px; } }
 
-  .tile.tile-32768 .tile-inner {
+  .tile.tile-28657 .tile-inner {
+    color: #f9f6f2;
+    background: #ff474d;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.74), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 27px; }
+    @media screen and (max-width: 480px) {
+      .tile.tile-28657 .tile-inner {
+        font-size: 12px; } }
+
+  .tile.tile-46368 .tile-inner {
     color: #f9f6f2;
     background: #ff284f;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.76), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 27px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-32768 .tile-inner {
+      .tile.tile-46368 .tile-inner {
         font-size: 12px; } }
 
-  .tile.tile-65536 .tile-inner {
+  .tile.tile-75025 .tile-inner {
     color: #f9f6f2;
     background: #ff0db2;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.80), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 27px; }
     @media screen and (max-width: 480px) {
-      .tile.tile-65536 .tile-inner {
+      .tile.tile-75025 .tile-inner {
         font-size: 12px; } }
 
   .tile.tile-super .tile-inner {
